<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numberContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dividerLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvCalculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:text="@string/_0"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvResult"
            />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:text="@string/result"
            android:textSize="35sp"
            android:visibility="gone"
            android:textColor="@color/blackLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-5dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/numberContainer"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blackLight"
        android:layout_marginHorizontal="28dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerLine"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btnBagi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/bagi"
            android:textSize="28sp"
            android:textColor="@color/orange"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnKali"
            app:layout_constraintStart_toEndOf="@id/btnPercent"
            app:layout_constraintEnd_toEndOf="parent" />
        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/percent"
            android:textSize="24sp"
            android:textColor="@color/orange"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@id/btnBackspace"
            app:layout_constraintEnd_toStartOf="@+id/btnBagi" />
        <ImageButton
            android:id="@+id/btnBackspace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:outlineProvider="none"
            android:src="@drawable/ic_baseline_backspace_24"
            android:background="@color/white"
            android:padding="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn8"
            app:layout_constraintStart_toEndOf="@id/btnAllClear"
            app:layout_constraintEnd_toStartOf="@+id/btnPercent"/>

        <Button
            android:id="@+id/btnAllClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ac"
            android:textSize="22sp"
            android:textColor="@color/orange"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnBackspace" />

        <Button
            android:id="@+id/btnKali"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/kali"
            android:textSize="28sp"
            android:textColor="@color/orange"
            android:outlineProvider="none"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnBagi"
            app:layout_constraintBottom_toTopOf="@+id/btnMin"
            app:layout_constraintStart_toEndOf="@id/btn9"
            app:layout_constraintEnd_toEndOf="parent" />
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_9"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:outlineProvider="none"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnPercent"
            app:layout_constraintBottom_toTopOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@id/btn8"
            app:layout_constraintEnd_toStartOf="@+id/btnKali" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_8"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btnBackspace"
            app:layout_constraintBottom_toTopOf="@+id/btn5"
            app:layout_constraintStart_toEndOf="@id/btn7"
            app:layout_constraintEnd_toStartOf="@+id/btn9"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btnAllClear"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn8"/>

        <Button
            android:id="@+id/btnMin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/min"
            android:textSize="28sp"
            android:textColor="@color/orange"
            android:outlineProvider="none"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnKali"
            app:layout_constraintBottom_toTopOf="@+id/btnPlus"
            app:layout_constraintStart_toEndOf="@id/btn6"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn9"
            app:layout_constraintBottom_toTopOf="@+id/btn3"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintEnd_toStartOf="@+id/btnMin" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn8"
            app:layout_constraintBottom_toTopOf="@+id/btn2"
            app:layout_constraintStart_toEndOf="@id/btn4"
            app:layout_constraintEnd_toStartOf="@+id/btn6"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_4"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn7"
            app:layout_constraintBottom_toTopOf="@+id/btn1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn5" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            android:textSize="28sp"
            android:textColor="@color/orange"
            android:outlineProvider="none"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnMin"
            app:layout_constraintBottom_toTopOf="@+id/btnEqual"
            app:layout_constraintStart_toEndOf="@id/btn3"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn6"
            app:layout_constraintBottom_toTopOf="@+id/btnDot"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_2"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn5"
            app:layout_constraintBottom_toTopOf="@+id/btn0"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintEnd_toStartOf="@+id/btn3"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn4"
            app:layout_constraintBottom_toTopOf="@+id/btn0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn2" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:outlineProvider="none"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDot" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:outlineProvider="none"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintEnd_toStartOf="@+id/btnEqual" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/res"
            android:textSize="28sp"
            android:textColor="@color/orange"
            android:outlineProvider="none"
            android:backgroundTint="@color/whiteorange"
            app:layout_constraintTop_toBottomOf="@id/btnPlus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>